# Regularidade

./: .gitignore  main.py  pyproject.toml
app/controller/: certificados.py  cnd_estadual.py  cnd_federal.py  cnd_municipal.py  consultar_cnpj.py
app/model/: ler_csv.py
app/utils/: resolver_capcha.py
modulos/: cnd_estadual.py  consultar_cnpj.py
