[project]
name = "12-cnds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pdfkit>=1.0.0",
    "playwright>=1.57.0",
    "requests>=2.32.5",
    "weasyprint>=67.0",
    "zeep>=4.3.2",
]
